fix(build): restore java8 compatibility in camera provider